<resources>
    <string name="app_name">eSIM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_country_usa">United States</string>
    <string name="region_check">Check our region esim package</string>
    <string name="esim">eSIM</string>
    <string name="virtual_numbers">Virtual Numbers</string>

    <string name="label_main_tourist">Tourist</string>
    <string name="label_main_children_tourist">Stay connected everywhere</string>

    <string name="label_main_premium">Premium</string>
    <string name="label_main_children_premium">Get strong network</string>

    <string name="label_main_business">Business</string>
    <string name="label_main_children_business">Encrypted data plan</string>

    <string name="label_one_time_payment">One time</string>
    <string name="label_monthly_payment">Monthly</string>

    <string name="label_name_tariff">AT&amp;T</string>
    <string name="name_half_one_european_region">European</string>
    <string name="name_half_two_european_region">Union</string>
    <string name="name_half_one_usa_region">United States</string>
    <string name="name_half_two_usa_region">&amp; Canada</string>
    <string name="region_name_children_usa">2 countries</string>
    <string name="region_name_children_european">29 countries</string>

    <string name="number_of_country_european_region">+24</string>

    <string name="dialog_fragment_name_first_carrier_name">AT&amp;T</string>
    <string name="dialog_fragment_name_second_carrier_name">T-Mobile</string>
    <string name="dialog_fragment_name_first_carrier_name_networks">2G, 3G, 4G/LTE, 5G</string>
    <string name="dialog_fragment_name_second_carrier_name_networks">4G/LTE, 5G</string>
    <string name="dialog_fragment_label_name">Coverage &amp; Carrier network\nfor United States</string>

    <string name="dialog_fragment_supported_devices_main_label">Supported devices</string>
    <string name="dialog_fragment_supported_devices_main_children_label">There are 59 devices that supported eSIM.\nWe are updating this list.</string>








</resources>
