<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_rectangle_region">


    <LinearLayout
        android:id="@+id/block_region_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_margins_medium_plus"
        android:layout_marginLeft="@dimen/default_margins_medium_plus">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_label_region_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/name_half_one_european_region"/>
        <TextView
            android:textSize="@dimen/size_label_region_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/name_half_two_european_region"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_label_region_name_children"
            android:textColor="@color/light_blue"
            android:text="@string/region_name_children_european"/>


    </LinearLayout>
    
    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="35dp"
        android:layout_marginTop="@dimen/default_margins_medium_plus"
        android:layout_marginRight="@dimen/default_margins_medium_plus"
        android:layout_height="35dp"
        android:src="@drawable/european_map_png"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block_all_european_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/default_margins_medium_plus">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/block_flag_european_union"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <LinearLayout

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_marginStart="@dimen/margins_flags"
                    android:layout_marginEnd="@dimen/margins_flags"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:background="@drawable/ic_flag_france" />
                <TextView
                    android:layout_marginStart="@dimen/margins_flags"
                    android:layout_marginEnd="@dimen/margins_flags"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:background="@drawable/ic_flag_germany" />
                <TextView
                    android:layout_marginStart="@dimen/margins_flags"
                    android:layout_marginEnd="@dimen/margins_flags"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:background="@drawable/ic_flag_italy" />
                <TextView
                    android:layout_marginStart="@dimen/margins_flags"
                    android:layout_marginEnd="@dimen/margins_flags"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:background="@drawable/ic_flag_portugal" />
                <TextView
                    android:layout_marginStart="@dimen/margins_flags"
                    android:layout_marginEnd="@dimen/margins_flags"
                    android:layout_width="@dimen/size_circle_image"
                    android:layout_height="@dimen/size_circle_image"
                    android:background="@drawable/ic_flag_spain" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/default_margins_small"
            app:layout_constraintStart_toEndOf="@id/block_flag_european_union"
            app:layout_constraintTop_toTopOf="@id/block_all_european_country"
            app:layout_constraintBottom_toBottomOf="@id/block_all_european_country"
            android:id="@+id/number"
            android:layout_height="wrap_content">

            <TextView

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="@dimen/size_circle_width_number_country"
                android:layout_height="@dimen/size_circle_height_number_country"
                android:textStyle="bold"
                android:text="@string/number_of_country_european_region"
                android:textSize="@dimen/size_text_number_country"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/white"
                android:background="@drawable/circle_background_number_of_country" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>