<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent_view_dialog_usa"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margins"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/close_dialog_usa"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_margin="@dimen/default_margins_medium"
        android:background="@drawable/shape_circle_dialog_close_background"
        app:layout_constraintBottom_toTopOf="@id/dialog_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/ic_close_dialog_fragment_black_14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/snape_rectangle_dialog_networks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_dialog_usa">

        <LinearLayout
            android:id="@+id/block_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margins"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/size_circle_image"
                android:layout_height="@dimen/size_circle_image"
                android:src="@drawable/ic_flag_usa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margins_medium"
                android:gravity="center_horizontal"
                android:text="@string/dialog_fragment_label_name"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_label_network"
                android:textStyle="normal" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/table_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_label">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carrier name"
                android:textColor="@color/color_dialog_fragment_table_text_name"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Network"
                android:textColor="@color/color_dialog_fragment_table_text_name"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                app:layout_constraintTop_toBottomOf="@id/network"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="horizontal"
                android:background="@color/color_dialog_fragment_main_line"
                android:layout_marginTop="@dimen/default_margins_small"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margins"
            android:layout_marginEnd="@dimen/default_margins"
            android:layout_marginTop="@dimen/default_margins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/table_name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_name_first_carrier_name"
                android:textColor="@color/black"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/support_networks_section_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_name_first_carrier_name_networks"
                android:textColor="@color/black"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                app:layout_constraintTop_toBottomOf="@id/support_networks_section_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="horizontal"
                android:background="@color/color_dialog_fragment_main_children_line"
                android:layout_marginTop="@dimen/default_margins_small"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margins"
            android:layout_marginEnd="@dimen/default_margins"
            android:layout_marginTop="@dimen/default_margins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_network"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_name_second_carrier_name"
                android:textColor="@color/black"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/support_networks_section_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_fragment_name_second_carrier_name_networks"
                android:textColor="@color/black"
                android:textSize="@dimen/size_table_text_carrier_text_network"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                app:layout_constraintTop_toBottomOf="@id/support_networks_section_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:orientation="horizontal"
                android:background="@color/color_dialog_fragment_main_children_line"
                android:layout_marginTop="@dimen/default_margins_small"/>



        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

